# SAFESPACE-AI-AGENT

./: .env.example  .gitignore  README.md  ai_agent.py  auth.py  config.py  database.py  frontend.py  main.py  models.py  pyproject.toml  requirements-backend.txt  requirements.txt  safespace.db  tools.py
backend/: ai_agent.py  main.py  tools.py
