[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "twilio>=9.7.1",
    "uvicorn>=0.35.0",
]
